--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
           <input type="email" id="email" name="email" required />
         </label>
         <label
-          >Message*
+          >Message<span>*</span>
           <textarea id="message" name="message" required></textarea>
         </label>
         <button class="form-btn" type="submit">
