--- a/index.html
+++ b/index.html
@@ -462,11 +462,11 @@
           /></label>
         </p>
         <label
-          >Name*
+          >Name<span>*</span>
           <input type="text" id="name" name="name" required />
         </label>
         <label
-          >Email*
+          >Email<span>*</span>
           <input type="email" id="email" name="email" required />
         </label>
         <label
